# teich

./: .gitignore  DOCS.md  README.md  ROADMAP.md  agent-prompts.csv  chat-prompts.csv  config.example.yaml  pyproject.toml  teich_example.py
.github/workflows/: test.yml
docker/: codex-runtime.Dockerfile
docs/: generation.md  studio.md
examples/: example_cursor_session.jsonl  example_hermes_session.jsonl  example_openclaw_session.jsonl  prompts.jsonl
scripts/: integration_test.py  model_mask_audit.py
src/agentic_datagen/: __init__.py  cli.py  config.py  formatter.py  runner.py  trace_readme.py
src/teich/: __init__.py  agent_cfg.py  anonymize.py  audit.py  cli.py  codex_auth_broker.py  config.py  converter.py  extract.py  formatter.py  loader.py  prepare.py  runner.py  tool_schema.py  trace_readme.py
src/teich/bench/: __init__.py  runner.py
src/teich/bench/backends/: __init__.py  base.py  harbor.py  swebench.py
src/teich/bench/templates/: agent.dockerfile.j2
src/teich/studio/: dataset_preview.py  extraction.py  generation.py  interactive.py  server.py
src/teich/studio/static/: app.js  index.html  style.css
src/teich/templates/: dataset_card.md.j2
src/teich/utils/: __init__.py  prompts.py  schema.py  trace.py
tests/: test_agent_cfg.py  test_audit.py  test_bench.py  test_cli.py  test_codex_auth_broker.py  test_codex_langfuse.py  test_config.py  test_converter.py  test_extract_anonymize_cli.py  test_formatter.py  test_integration.py  test_langfuse_agents.py  test_loader.py  test_runner.py  test_studio.py  test_swebench.py  test_tool_schema.py  test_trace_readme.py
