[project]
name = "teich"
version = "0.1.1a17"
description = "Turn coding agent traces into training data"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "docker>=7.0",
    "typer>=0.12",
    "rich>=13.0",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "respx>=0.22"]

[project.scripts]
teich = "teich.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teich"]

[tool.hatch.build.targets.wheel.force-include]
"docker/codex-runtime.Dockerfile" = "teich/docker/codex-runtime.Dockerfile"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires Docker, API keys)",
    "slow: marks tests as slow (Docker builds, real API calls)",
]
