[project]
name = "teich"
version = "0.1.1a80"
description = "Turn coding agent traces into auditable supervised fine-tuning data"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.0",
    "datasets>=2.19.0",
    "huggingface_hub>=0.23.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4", "jinja2>=3.1"]

[project.scripts]
teich = "teich.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/teich"]

[tool.hatch.build.targets.wheel.force-include]
"docker/codex-runtime.Dockerfile" = "teich/docker/codex-runtime.Dockerfile"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docker",
    "/.github",
    "/README.md",
    "/DOCS.md",
    "/ROADMAP.md",
    "/LICENSE",
    "/pyproject.toml",
    "/uv.lock",
    "/config.example.yaml",
    "/teich_example.py",
    "/gemma4_example.py",
    "/gemma-4-chat-template.jinja",
    "/new_gemma_4_template.jinja",
    "/qwen3.6_chat_template.jinja",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
pythonpath = ["src"]
markers = [
    "integration: marks tests as integration tests (requires Docker, API keys)",
    "slow: marks tests as slow (Docker builds, real API calls)",
    "tokenizer_smoke: marks tests as real Hugging Face tokenizer smoke tests",
]
